# UPM-AI-GROBID

./:  .readthedocs.yaml  .gitignore  CITATION.cff  Dockerfile  README.md  codemeta.json  docker-compose.yml  docker_requirements.txt  pyproject.toml  requirements.txt  run.sh  temp.json
Template/: histogram.html  report.html
docs/: execution.md  execution.rst  home.md  home.rst  index.md  index.rst  introduction.md  introduction.rst  license.md  license.rst  mkdocs.yml  rationale.md  rationale.rst  requirements.txt  workflow.rst
docs/docs/: license.md  rationale.md  workflow.md
tests/: test.xml  test1.xml  tests.py
upm_ai_grobid/: __init__.py  mama-papers.py  mama_papers.py
