[tool.poetry]
name = "upm-ai-grobid"
version = "0.1.0"
description = ""
authors = ["JCabeza99 <jaime.cabeza99@gmail.com>"]
readme = "README.md"
packages = [{include = "upm_ai_grobid"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
wordcloud = "^1.8.2.2"
matplotlib = "^3.7.1"
pdfkit = "^1.0.0"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
